# The-Ridges

./: .gitignore  M_Brick1.uasset  README.md  T_Brick1.uasset  T_Brick3.uasset  project.godot
.github/workflows/: godot-tests.yml  godot_tests.yml  test.yml
Config/: DefaultEngine.ini
Scripts/: Player.gd  coin.gd  game_manager.gd  killzone.gd  monster.gd
Tests/: gameplay_tests.gd
The Ridges/Config/: DefaultEngine.ini  DefaultGame.ini
TheHorrorFramework3/Binaries/Win64/: Horror_FPS_TemplateEditor.target  UnrealEditor.modules
TheHorrorFramework3/Config/: DefaultEngine.ini  DefaultInput.ini
TheHorrorFramework3/Content/: Ai_Jumpscare_Run.uasset
TheHorrorFramework3/Content/AI/: BB_Enemy.uasset  BT_Enemy.uasset  sample_jumpscrare.uasset
TheHorrorFramework3/Content/EasyNotesSystem/: BP_Notee.uasset  WBP_NoteReader.uasset
TheHorrorFramework3/Content/Fab/: Ghoul_PhysicsAsset.uasset  Ghoul_Skeleton.uasset  coekMesh.uasset
TheHorrorFramework3/Saved/Autosaves/: PackageRestoreData.json
TheHorrorFramework3/Saved/SourceControl/: UncontrolledChangelists.json
TheHorrorFramework3/Saved/webcache_4430/: Cookies  LOG  LOG.old  LocalPrefs.json  Network Persistent State  Reporting and NEL  TransportSecurity  Visited Links
TheHorrorFramework3/Source/: Horror_FPS_Template.Target.cs  Horror_FPS_TemplateEditor.Target.cs
TheHorrorFramework3/Source/Horror_FPS_Template/: EnemyAIController.cpp  EnemyAIController.h  EnemyUpdated.cc  EnemyUpdated.h  FlashTrigger.cc  FlashTrigger.h  (+2 more)
TheHorrorFramework3/tests/: CMakeLists.txt  EnemyAIController_tests.cpp
tests/: run_tests.gd
(+1086 files in other folders)
